--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ jkan_theme: Default
 
 # Authentication
 github_client_id: c8405adfee37ae71d9f4
-gatekeeper_host: planet-detroit-data-hub
+gatekeeper_host: https://planet-detroit-data-hub.herokuapp.com
 
 # Dataset schema
 schema: default
