--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: JKAN
+title: Planet Detroit Data Catalog
 greeting: Welcome to JKAN
 description: A lightweight, backend-free open data portal, powered by Jekyll.
-baseurl: /jkan
+baseurl: /data-hub
 logo: /img/jkan.png
 
 # Site theme
