--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Planet Detroit Data Catalog
-greeting: Welcome to JKAN
+greeting: Welcome to Planet Detroit's Data Catalog
 description: A lightweight, backend-free open data portal, powered by Jekyll.
 baseurl: /data-hub
 logo: /img/jkan.png
