--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: /data-hub
 logo: /img/jkan.png
 
 # Site theme
-jkan_theme: Superhero
+jkan_theme: Litera
 
 # Authentication
 github_client_id: c8405adfee37ae71d9f4  
