--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ navigation:
     url: /datasets/
   - title: Organizations
     url: /organizations/
+  - title: About
+    url: /about/
 
 # Collections
 collections:
