--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Planet Detroit Data Catalog
 greeting: Welcome to Planet Detroit's Data Catalog
 description: A lightweight, backend-free open data portal, powered by Jekyll.
 baseurl: /data-hub
-logo: /img/jkan.png
+logo: /img/logo.svg
 
 # Site theme
 jkan_theme: Readable
