--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Planet Detroit Data Catalog
+title: Planet Detroit’s Resource Hub
 greeting: Welcome to Planet Detroit’s Resource Hub
 description: Find and share data, documents, and resources about the local environment.
 baseurl: /data-hub
