--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Planet Detroit’s Resource Hub
 greeting: Welcome to Planet Detroit’s Resource Hub
 description: Find and share data, documents, and resources about the local environment.
-baseurl: /data-hub
+baseurl: /resource-hub
 logo: /img/pdlogo.png
 
 # Site theme
