no more fast food

--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -18,7 +18,7 @@
   logo_credit: Google
   featured: true
 - name: Food
-  logo: /img/categories/final icons/fastfood-24px.svg
+  logo: /img/categories/final icons/restaurant-24px.svg
   logo_credit: Google
   featured: true
 - name: Wildlife
